--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -9,12 +9,12 @@ $color-2: #FFC95C;
 $color-3:#F7F7F7;
 $color-4: #38369A;
 
-//bloc réutilisables
-@mixin verticalCenter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+//bloc réutilisable
+// @mixin verticalCenter {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
 * {
   padding: 0;
@@ -46,4 +46,36 @@ h1{
   margin: auto;
   text-align: center;
   padding: 20px;
+}
+
+.add-user {
+  background-color: $color-2;
+  color: $color-1;
+  border: $color-4 solid 2px;
+  font-weight: bold;
+  font-size: large;
+  border-radius: 10px;
+  padding: 10px 15px;
+  cursor: pointer;
+  margin:auto;
+
+  &:hover {
+    background-color: darken($color-2, 30%);
+  }
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px; 
+}
+
+a {
+  text-decoration: none;
+  color: $color-3;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
